get vocabularies, questions and answers function
