# storage/api-docs/api-docs.json
@@ -412,7 +412,155 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Get vocabularies, questions and aswers is successfully"
+                        "description": "Get lesson successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Get lesson successfully"
+                                        },
+                                        "lesson": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "topic_id": {
+                                                    "type": "integer"
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Lesson 1"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "image": {
+                                                    "type": "string"
+                                                },
+                                                "status": {
+                                                    "type": "string"
+                                                },
+                                                "timestamp": {
+                                                    "type": "string"
+                                                },
+                                                "vocabularies": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "example": 1
+                                                            },
+                                                            "lesson_id": {
+                                                                "type": "integer"
+                                                            },
+                                                            "user_id": {
+                                                                "type": "integer"
+                                                            },
+                                                            "word_id": {
+                                                                "type": "integer"
+                                                            },
+                                                            "status": {
+                                                                "type": "string"
+                                                            },
+                                                            "timestamp": {
+                                                                "type": "string"
+                                                            },
+                                                            "word": {
+                                                                "properties": {
+                                                                    "id": {
+                                                                        "type": "integer"
+                                                                    },
+                                                                    "word": {
+                                                                        "type": "string"
+                                                                    },
+                                                                    "pronunciation": {
+                                                                        "type": "string"
+                                                                    },
+                                                                    "meaning": {
+                                                                        "type": "string"
+                                                                    },
+                                                                    "image": {
+                                                                        "type": "string"
+                                                                    },
+                                                                    "timestamp": {
+                                                                        "type": "string"
+                                                                    }
+                                                                },
+                                                                "type": "object"
+                                                            },
+                                                            "questions": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "properties": {
+                                                                        "id": {
+                                                                            "type": "integer"
+                                                                        },
+                                                                        "vocabulary_id": {
+                                                                            "type": "integer"
+                                                                        },
+                                                                        "content": {
+                                                                            "type": "string"
+                                                                        },
+                                                                        "meaning": {
+                                                                            "type": "string"
+                                                                        },
+                                                                        "status": {
+                                                                            "type": "string"
+                                                                        },
+                                                                        "timestamp": {
+                                                                            "type": "string"
+                                                                        },
+                                                                        "answers": {
+                                                                            "type": "array",
+                                                                            "items": {
+                                                                                "properties": {
+                                                                                    "id": {
+                                                                                        "type": "integer"
+                                                                                    },
+                                                                                    "question_id": {
+                                                                                        "type": "integer"
+                                                                                    },
+                                                                                    "content": {
+                                                                                        "type": "string"
+                                                                                    },
+                                                                                    "is_correct": {
+                                                                                        "type": "integer",
+                                                                                        "enum": [
+                                                                                            0,
+                                                                                            1
+                                                                                        ]
+                                                                                    },
+                                                                                    "timestamp": {
+                                                                                        "type": "string"
+                                                                                    }
+                                                                                },
+                                                                                "type": "object"
+                                                                            }
+                                                                        }
+                                                                    },
+                                                                    "type": "object"
+                                                                }
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "500": {
                         "description": "Server error"
